--- a/package.json
+++ b/package.json
@@ -30,20 +30,26 @@
 		"prisma": "^5.15.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-headless-table": "^0.18.2",
+		"sveltekit-superforms": "^2.15.1",
+		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
 		"tsx": "^4.15.5",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"zod": "^3.23.8"
 	},
 	"type": "module",
 	"dependencies": {
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
+		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.395.0",
 		"mode-watcher": "^0.3.0",
 		"sqlite3": "^5.1.7",
+		"svelte-motion": "^0.12.2",
 		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
