--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.395.0",
 		"mode-watcher": "^0.3.0",
+		"p-iteration": "^1.1.8",
 		"sqlite3": "^5.1.7",
 		"svelte-motion": "^0.12.2",
 		"svelte-sonner": "^0.3.24",
