--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/file-saver": "^2.0.7",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -49,6 +50,7 @@
 		"@pdfme/ui": "^3.2.1",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
+		"file-saver": "^2.0.5",
 		"formsnap": "^1.0.1",
 		"jspdf": "^2.5.1",
 		"jspdf-autotable": "^3.8.2",
@@ -61,7 +63,8 @@
 		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
-		"ts-node": "^10.9.2"
+		"ts-node": "^10.9.2",
+		"xlsx": "^0.18.5"
 	},
 	"compilerOptions": {
 		"esModuleInterop": true
