--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"seed": "ts-node prisma/seed.ts"
+		"seed": "npm tsx prisma/seed.ts"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
